# coding-research-assistant-agent

./: .env  README.md  main.py  pyproject.toml  simple-agent.py
src/: firecrawl.py  prompts.py  workflow.py
