[project]
name = "coding-research-assistant-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "firecrawl-py==2.7.1",
    "langchain>=0.3.27",
    "langchain-mcp-adapters>=0.1.10",
    "langchain-openai>=0.3.34",
    "langgraph>=0.6.8",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
]
